--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               </a>
 
               <a href="#">
-                <img src="images/dribbble-logo.png" alt="" />
+                <img src="images/rtcs-logo.png" alt="" />
               </a>
 
               <a href="https://www.instagram.com/vBathuN/">
