--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <img src="images/twitter-logo.png" alt="" />
               </a>
 
-              <a href="https://rtc.rtcs.live">
+              <a href="https://web.rtcs.live">
                 <img src="images/rtcs-logo.png" alt="" />
               </a>
 
