--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           </div>
 
           <div class="right">
-            <img src="images/hero-image.jpg" alt="" />
+            <img src="images/hero-image.png" alt="" />
           </div>
         </div>
       </header>
